--- a/giraffes.html
+++ b/giraffes.html
@@ -6,7 +6,7 @@
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,8 +16,8 @@
             <div id="main">
                 <div id="content">
                     <a class="info-box" href="giraffes.html">
-                        <img class="right" src="images/images/next-arrow.png"/>
-                        <img src="images/images/giraffe-large.jpg"/>
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/giraffe-large.jpg"/>
                         <h3>Giraffes</h3>
                         <p>The giraffe is a large African hoofed mammal belonging to the genus Giraffa. It is the tallest living terrestrial animal and the largest ruminant on Earth. Traditionally, giraffes have been thought of as one species, Giraffa camelopardalis, with nine subspecies. Most recently, researchers proposed dividing them into four extant species due to new research into their mitochondrial and nuclear DNA, and individual species can be distinguished by their fur coat patterns.</p>
 
