--- a/dine@thezoo.html
+++ b/dine@thezoo.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
               <div id="list">
                 <div id="content">
                  <div id="info-box-full">
-                 <img src="images/images/outdoor_restaurant.jpg">
+                 <img src="images/outdoor_restaurant.jpg">
                   <h3>DINE@THE ZOO</h3>
                   <p>Enjoy gourmet meals in serene outdoor setting.</p>
                 </div>
