--- a/elephants.html
+++ b/elephants.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/elephant.jpg"/>
+                    <img src="images/elephant.jpg"/>
                     <h3>Elephants</h3>
                     <p>Elephants are large mammals of the family Elephantidae and the order Proboscidea. Two 
     species are traditionally recognised, the African elephant (Loxodonta africana)
