--- a/feedback.html
+++ b/feedback.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/giraffe-large.jpg"/>                  
+                    <img src="images/giraffe-large.jpg"/>                  
                      <h3>WE'D LOVE TO HEAR FROM YOU!</h3>
                      <p>We always strive to do best, so your feedback is very important to us.
                        Please fill in the form below</p>
