--- a/gembok.html
+++ b/gembok.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/gemsbok.jpg"/>
+                    <img src="images/gemsbok.jpg"/>
                     <h3>Gemsbok</h3>
                     <p> is a large antelope in the genus Oryx. 
                         It is endemic to the dry and barren regions of Botswana, Namibia, South Africa and (parts of) Zimbabwe,
