--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       </head>
 <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -13,7 +13,7 @@
                 <a href="places.html">PLACES</a>
             </div>
             <div id="main-home">
-                <img src="images/images/map.png" width="100%"/>
+                <img src="images/map.png" width="100%"/>
             </div>
             <div id="tabs-bottom">
                 <a href="weather.html">WEATHER</a>
