--- a/insecthouse.html
+++ b/insecthouse.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
               <div id="list">
                 <div id="content">
                  <div id="info-box-full">
-                 <img src="images/images/insect-house-tn.png">
+                 <img src="images/insect-house-tn.png">
                   <h3>INSECT HOUSE</h3>
                   <p>An insect house, also known as a bug hotel, is a structure designed to provide shelter and nesting spots for beneficial insects like bees, butterflies, and ladybugs. These tiny homes help support biodiversity, encourage pollination, and even assist in natural pest control</p>
                   <p><strong>WHERE WILL YOU FIND THEM?</strong></p>
