--- a/koala.html
+++ b/koala.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/koala.jpg"/>
+                    <img src="images/koala.jpg"/>
                     <h3>Koala</h3>
                     <p> The koala is found in coastal areas of the island's eastern and southern regions, inhabiting Queensland, New South Wales, Victoria, and South Australia. It is easily recognisable by its stout, tailless body and large head with round, fluffy ears and large, dark nose. The koala has a body length of 60–85 cm (24–33 in) and weighs 4–15 kg (8.8–33.1 lb). Its fur colour ranges from silver grey to chocolate brown. Koalas from the northern populations are typically smaller and lighter in colour than their counterparts further south.</p>
                           
