--- a/lostforest.html
+++ b/lostforest.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
                <div id="list">
                 <div id="content">
                  <div id="info-box-full">
-                 <img src="images/images/lost-forest.jpg">
+                 <img src="images/lost-forest.jpg">
                   <h3>LOST FOREST</h3>
                   <p>Relax and have a picnic under the trees by the lake</p>
                 </div>
