--- a/message-received.html
+++ b/message-received.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/panda.jpg"/>                  
+                    <img src="images/panda.jpg"/>                  
                      <h3>THANK YOU!</h3>
                      <p>Your message has been receieved</p>
                      <p>We will respond shortly.</p>
