--- a/mo's-pizza.html
+++ b/mo's-pizza.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
               <div id="list">
                 <div id="content">
                  <div id="info-box-full">
-                 <img src="images/images/coffee-shop-tn.png">
+                 <img src="images/coffee-shop-tn.png">
                   <h3>MO'S PIZZA</h3>
                   <p>Scrumptious pizzas and pasta for the family</p>
                 </div>
