--- a/monkey-trails.html
+++ b/monkey-trails.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
               <div id="list">
                 <div id="content">
                  <div id="info-box-full">
-                 <img src="images/images/monkey-trail.jpg">
+                 <img src="images/monkey-trail.jpg">
                   <h3>MONKEY TRAILS</h3>
                   <p>Take a walk or ride through this challenging obstacle course</p>
                 </div>
