--- a/panda.html
+++ b/panda.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/panda.jpg"/>
+                    <img src="images/panda.jpg"/>
                     <h3>Panda</h3>
                     <p>  It is characterised by its white coat with black patches around the eyes, ears, legs and shoulders. Its body is rotund; adult individuals weigh 100 to 115 kg (220 to 254 lb) and are typically 1.2 to 1.9 m (3 ft 11 in to 6 ft 3 in) long. It is sexually dimorphic, with males being typically 10 to 20% larger than females. A thumb is visible on its forepaw, which helps in holding bamboo in place for feeding. It has large molar teeth and expanded temporal fossa to meet its dietary requirements.</p>
                           
