--- a/warthogs.html
+++ b/warthogs.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -16,7 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
-                    <img src="images/images/warthog.jpg"/>
+                    <img src="images/warthog.jpg"/>
                     <h3>WARTHOGS</h3>
                     <p> They are pigs who live in open and semi-open habitats, even in quite arid regions, in sub-Saharan Africa. The two species were formerly considered conspecific under the scientific name Phacochoerus aethiopicus, but today this is limited to the desert warthog, while the best-known and most widespread species, the common warthog (or simply warthog), is Phacochoerus africanus.[2]</p>                          <p><strong>WHERE WILL YOU FIND THEM?</strong></p>
                      <p>You will find the warthog next to monkey trail</p>
