--- a/weather.html
+++ b/weather.html
@@ -6,7 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
-                  <img src="images/images/logo.png"/>
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -17,7 +17,7 @@ DOCTYPE html>
                 <div id="content">
                    <div id="info-box-full">
                     <h3>PINE CITY WEATHER</h3>
-                    <p> <img class="info-box-weather-icon" src="images/images/partly-cloudy.png"/>Partly Cloud</p>
+                    <p> <img class="info-box-weather-icon" src="images/partly-cloudy.png"/>Partly Cloud</p>
                     <p>&uarr;25&deg; &darr;16&deg;</p>
                     <h1 class="info-box-weather-icon">22&deg;</h1>
 
@@ -26,37 +26,37 @@ DOCTYPE html>
                     <table>
                        <tr>
                            <td>Tuesday</td>
-                           <td><img class="info-box-weather-icon" src="images/images/sunny.png"/></td>
+                           <td><img class="info-box-weather-icon" src="images/sunny.png"/></td>
                            <td>&uarr;28</td>
                            <td>&darr;17</td>
                        </tr>
                        <tr>
                            <td>Wednesday</td>
-                           <td><img class="info-box-weather-icon" src="images/images/partly-cloudy.png"/></td>
+                           <td><img class="info-box-weather-icon" src="images/partly-cloudy.png"/></td>
                            <td>&uarr;26</td>
                            <td>&darr;19</td>
                        </tr>
                        <tr>
                            <td>Thursday</td>
-                           <td><img class="info-box-weather-icon" src="images/images/rain.png"/></td>
+                           <td><img class="info-box-weather-icon" src="images/rain.png"/></td>
                            <td>&uarr;20</td>
                            <td>&darr;17</td>
                        </tr>
                        <tr>
                            <td>Friday</td>
-                           <td><img class="info-box-weather-icon" src="images/images/sunny.png"/></td>
+                           <td><img class="info-box-weather-icon" src="images/sunny.png"/></td>
                            <td>&uarr;29</td>
                            <td>&darr;15</td>
                        </tr>
                        <tr>
                            <td>Saturday</td>
-                           <td><img class="info-box-weather-icon" src="images/images/sunny.png"/></td>
+                           <td><img class="info-box-weather-icon" src="images/sunny.png"/></td>
                            <td>&uarr;25</td>
                            <td>&darr;20</td>
                        </tr>
                        <tr>
                            <td>Sunday</td>
-                           <td><img class="info-box-weather-icon" src="images/images/sunny.png"/></td>
+                           <td><img class="info-box-weather-icon" src="images/sunny.png"/></td>
                            <td>&uarr;30</td>
                            <td>&darr;21</td>
                        </tr>
