--- a/amphitheatre.html
+++ b/amphitheatre.html
@@ -6,6 +6,7 @@ DOCTYPE html>
 
       <body>
             <div id="header">
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
@@ -15,6 +16,7 @@ DOCTYPE html>
             <div id="main">
                 <div id="content">
                    <div id="info-box-full">
+                    <img src="images/garden-amphitheater.jpg"/>                  
                      <h3>AMPHITHEATRE</h3>
                     <p>>Learn and entertained.Come and catch daily and educational and entertaning shows,
                         tal demonstrations at amphitheatre club.</p>
