--- a/animals.html
+++ b/animals.html
@@ -6,26 +6,36 @@
 
       <body>
             <div id="header">
+                  <img src="images/logo.png"/>
             </div>
             <div id="tabs-top">
                 <a href="animals.html">ANIMALS</a>
                 <a href="index.html">MAP</a>
+                <a href="places.html">PLACES</a>
             </div>
             <div id="main">
                 <div id="content">
                     <a class="info-box" href="elephants.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/elephant.jpg"/>
                         <h3>ELEPHANTS</h3>
                         <p>Gentle giants pf the jungle</p>
                     </a>
                      <a class="info-box" href="gembok.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/gemsbok-tn.png"/>
                         <h3>GEMSBOK</h3>
                         <p>Come and see the majestic Gemsbok</p>
                     </a>
                      <a class="info-box" href="giraffes.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/giraffe-tn.png"/>
                         <h3>GIRRAFE</h3>
                         <p>Our giraffes love company!</p>
                     </a>
                      <a class="info-box" href="gorilla.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/gorilla-tn.png"/>
                         <h3>GORILLA</h3>
                         <p>Kong the gorilla is so much friendlier than he looks</p>
                     </a>
@@ -36,19 +46,26 @@
                         <p>Come take a look at the cute Koalas</p>
                     </a>
                      <a class="info-box" href="lions.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/lion-tn.png"/>
                         <h3>LIONS</h3>
                         <p>The king of the jungle awaits you</p>
                     </a>
                      <a class="info-box" href="monkeys.html">
                         <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/monkey-tn.png"/>
                         <h3>MONKEYS</h3>
                         <p>Playful monkeys are cleverer than you think</p>
                     </a>
                      <a class="info-box" href="panda.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/panda-tn.png"/>
                         <h3>PANDAS</h3>
                         <p>The pandas seem to be everyone's favorite</p>
                     </a>
                      <a class="info-box" href="warthogs.html">
+                        <img class="right" src="images/next-arrow.png"/>
+                        <img src="images/warthog-tn.png"/>
                         <h3>WARTHOGS</h3>
                         <p>Find out more about this fuuy-looking fellow</p>
                     </a>
